# libOpenDRIVE

libopendrive_rust/: Cargo.toml  build.rs  cbindgen.toml
libopendrive_rust/examples/: main  main.cpp
libopendrive_rust/include/: libopendrive_rust.h
libopendrive_rust/src/: lib.rs
tests/: simple_arc.xodr  simple_line.xodr  simple_spiral.xodr
